force-app/main/default/objects/Purchase_Requisition__c/Purchase_Requisition__c.object-meta.xml
<CustomObject>
    <label>Purchase Requisition</label>
    <nameField>
        <displayFormat>PR-{000000}</displayFormat>
        <label>Purchase Requisition Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Requisitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>