force-app/main/default/objects/Purchase_Requisition__c/fields/Line_Item_Count__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Count__c</fullName>
    <label>Line Item Count</label>
    <summaryForeignKey>Purchase_Requisition_Line__c.Purchase_Requisition__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>