force-app/main/default/objects/Purchase_Requisition__c/fields/Plant__c.field-meta.xml
<CustomField>
    <fullName>Plant__c</fullName>
    <label>Plant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Distribution Center</fullName>
            </value>
            <value>
                <fullName>Head Office</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Plant 01</fullName>
            </value>
            <value>
                <fullName>Plant 02</fullName>
            </value>
            <value>
                <fullName>Plant 03</fullName>
            </value>
            <value>
                <fullName>Project Site</fullName>
            </value>
            <value>
                <fullName>Regional Office</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>