force-app/main/default/objects/Purchase_Requisition__c/fields/PR_Type__c.field-meta.xml
<CustomField>
    <fullName>PR_Type__c</fullName>
    <label>PR Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Capital Asset</fullName>
                <default>true</default>
                <label>Capital Asset</label>
            </value>
            <value>
                <fullName>Consumable</fullName>
            </value>
            <value>
                <fullName>Emergency Procurement</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Material</fullName>
            </value>
            <value>
                <fullName>Project Procurement</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>