force-app/main/default/objects/Purchase_Requisition__c/fields/Procurement_Category__c.field-meta.xml
<CustomField>
    <fullName>Procurement_Category__c</fullName>
    <label>Procurement Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Civil</fullName>
            </value>
            <value>
                <fullName>Electrical</fullName>
            </value>
            <value>
                <fullName>Instrumentation</fullName>
            </value>
            <value>
                <fullName>IT Equipment</fullName>
            </value>
            <value>
                <fullName>Logistics</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Mechanical</fullName>
            </value>
            <value>
                <fullName>Office Supplies</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Packaging Material</fullName>
            </value>
            <value>
                <fullName>Professional Services</fullName>
            </value>
            <value>
                <fullName>Raw Material</fullName>
            </value>
            <value>
                <fullName>Safety Equipment</fullName>
            </value>
            <value>
                <fullName>Utilities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>