force-app/main/default/objects/Purchase_Requisition__c/fields/Procurement_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Procurement_Remarks__c</fullName>
    <label>Procurement Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>