force-app/main/default/objects/Purchase_Requisition__c/fields/Purchase_Order_Created__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Purchase Order Created</label>
    <type>Checkbox</type>
</CustomField>