force-app/main/default/objects/Purchase_Requisition__c/fields/RFQ_Created__c.field-meta.xml
<CustomField>
    <fullName>RFQ_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RFQ Created</label>
    <type>Checkbox</type>
</CustomField>