force-app/main/default/objects/Purchase_Requisition__c/fields/Total_Estimated_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Estimated_Amount__c</fullName>
    <label>Total Estimated Amount</label>
    <summarizedField>Purchase_Requisition_Line__c.Line_Total__c</summarizedField>
    <summaryForeignKey>Purchase_Requisition_Line__c.Purchase_Requisition__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>