force-app/main/default/objects/Purchase_Requisition__c/validationRules/VR_PR_Must_Have_Line_Items.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_PR_Must_Have_Line_Items</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISPICKVAL( Status__c, &quot;Submitted&quot;),
 Line_Item_Count__c = 0 
)</errorConditionFormula>
    <errorMessage>A Purchase Requisition must contain at least one line item before it can be submitted.</errorMessage>
</ValidationRule>